--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,3 +7,7 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 ByteCompile: true
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
