--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,13 +4,11 @@ Title: What the Package Does (One Line, Title Case)
 Description: What the package does (one paragraph).
 Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
 License: What license is it under?
-Imports:
-  tidyverse
 Encoding: UTF-8
 LazyData: true
 ByteCompile: true
 Suggests:
-    testthat
+    testthat,
     knitr,
     rmarkdown
 VignetteBuilder: knitr
