Overhaul formatting + name

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,23 @@
-Package: fishrosetta
-Version: 0.0.0.9000
+Package: rosettafish
 Title: What the Package Does (One Line, Title Case)
+Version: 0.0.0.9000
+Authors@R: 
+    person(given = "First",
+           family = "Last",
+           role = c("aut", "cre"),
+           email = "first.last@example.com")
 Description: What the package does (one paragraph).
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-License: What license is it under?
+License: GPL (>=2)
+Depends: 
+    R (>= 3.3.0)
+Suggests:
+    knitr,
+    rmarkdown,
+    testthat
+VignetteBuilder: 
+    knitr
+ByteCompile: true
 Encoding: UTF-8
 LazyData: true
-ByteCompile: true
-Suggests:
-    testthat,
-    knitr,
-    rmarkdown
-VignetteBuilder: knitr
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 6.1.1
